kubernetes/full-stack/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
