kubernetes/full-stack/api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  rules:
  - host: sc-dashboard.byo.one
    http:
      paths:
      - path: /graphql
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 4000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 4000
